js262/test/language/expressions/postfix-increment/line-terminator-paragraph-separator.js


/*---
info: Line Terminator between LeftHandSideExpression and "++" is not allowed
es5id: 11.3.1_A1.1_T4
esid: postfix-increment-operator
description: Checking Paragraph separator
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

x ++;

